(executable
 (package dkml-component-offline-opam)
 (name opam_install)
 (public_name offline_opam_install)
 (modes (byte exe))
 (libraries diskuvbox fpath))

(install
 (package dkml-component-offline-opam)
 (section share)
 (files
  (opam_install.bc as staging-files/generic/install.bc)))

(rule
 (alias runtest)
 (package dkml-component-offline-opam)
 (deps
  (:bc opam_install.bc))
 (action
  (progn
   (with-stdout-to
    info.txt
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    dlls.corrected.txt
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" info.txt))
   (diff? dlls.txt dlls.corrected.txt))))
