(executables
 (package dkml-component-offline-opam)
 (names opam_install opam_uninstall)
 (public_names offline_opam_install offline_opam_uninstall)
 (modes
  (byte exe))
 (modules opam_install opam_uninstall)
 (libraries
  cmdliner
  diskuvbox
  dkml-install.api
  dkml-component-common-opam
  fmt.cli
  fmt.tty
  fpath
  logs.cli
  logs.fmt))

(executables
 (package dkml-component-offline-opamshim)
 (names opamshim_install)
 (public_names offline_opamshim_install)
 (modes
  (byte exe))
 (modules opamshim_install)
 (libraries
  cmdliner
  diskuvbox
  dkml-install.api
  dkml-component-common-opam
  fmt.cli
  fmt.tty
  fpath
  logs.cli
  logs.fmt))

(install
 (package dkml-component-offline-opam)
 (section share)
 (files
  (opam_install.bc as staging-files/generic/install_user.bc)
  (opam_uninstall.bc as staging-files/generic/uninstall_user.bc)))

(install
 (package dkml-component-offline-opamshim)
 (section share)
 (files
  (opamshim_install.bc as staging-files/generic/install_user.bc)))

(rule
 (alias runtest)
 (package dkml-component-offline-opam)
 (deps
  (:bc opam_install.bc))
 (action
  (progn
   (with-stdout-to
    info.install.txt
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    dlls.install.corrected.txt
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" info.install.txt))
   (diff? dlls.install.txt dlls.install.corrected.txt))))

(rule
 (alias runtest)
 (package dkml-component-offline-opam)
 (deps
  (:bc opam_uninstall.bc))
 (action
  (progn
   (with-stdout-to
    info.uninstall.txt
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    dlls.uninstall.corrected.txt
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" info.uninstall.txt))
   (diff? dlls.uninstall.txt dlls.uninstall.corrected.txt))))
