(executable
 (name setup_userprofile)
 (public_name setup_userprofile)
 (package dkml-component-network-ocamlcompiler)
 (modes
  (byte exe))
 (libraries bos))

(install
 (section share)
 (package dkml-component-network-ocamlcompiler)
 (files
  (setup_userprofile.bc as staging-files/generic/setup_userprofile.bc)))
